# bare_metal_rust

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
examples/: hello.rs  wind.rs
src/: lib.rs
