[package]
name = "bare_metal_rust"
version = "0.1.0"
edition = "2021"
[lib]
test = false

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
microbit-v2 = "0.15"
rtt-target = "0.5.0"
panic-rtt-target = { version = "0.1.3" }


[dependencies.nrf52833-pac]
version = "0.12"
features = ["rt"]

[dependencies.nrf52833-hal]
version = "0.18"
default-features = false
features = ["rt"]


# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"


features = ["inline-asm", "critical-section-single-core"]
